--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 REACT_APP_SKIP_PREFLIGHT_CHECK=true
+REACT_APP_SERVICE_ID=service_ujdalzd
+REACT_APP_TEMPLATE_ID=template_ymlsbca
+REACT_APP_USER_ID=user_tlDf0DB2L2CsL65RpNEDI
